# atcoder-tester

./: Cargo.toml  README.md
src/: api.rs  cli.rs  main.rs
src/api/: config.rs  contest.rs  expand_files.rs  http.rs  sample_test.rs
src/api/expand_files/: debug_cfgs_remove.rs
src/cli/: add.rs  clip.rs  init.rs  login.rs  open.rs  submit.rs  test.rs
src/cli/assets/: actester.toml  cargo-config.toml  libs-Cargo.toml  template-Cargo.toml  template-main.rs  workspace-Cargo.toml
