[package]
name = "atcoder-tester"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "act"
path = "src/main.rs" 

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.32"
percent-encoding = "2.3.2"
prettyplease = "0.2.37"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["cookies"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["visit-mut"] }
syn-file-expand = "0.3.0"
tokio = { version = "1.52.2", features = ["full"] }
toml = "1.1.2"
toml_edit = "0.25.11"
